--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,6 @@ cache:
   - node_modules
 script:
   - npm run build
+after_success:
+  - npm install -g firebase-tools
+  - firebase deploy --token $FIREBASE_TOKEN --non-interactive
