--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 firebase-debug.log*
+.DS_Store
 
 # Firebase cache
 .firebase/
@@ -64,4 +65,3 @@ node_modules/
 # dotenv environment variables file
 .env
 
-node_modules/
