--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,17 @@
 language: node_js
 node_js:
   - "stable"
+addons:
+  apt:
+    packages:
+      # needed by Cypress, not in Ubuntu 16+ by default
+      - libgconf-2-4
 cache:
   directories:
   - node_modules
+  - ~/.cache
 script:
+  - npm run test:ci
   - npm run build
 after_success:
   - npm install -g firebase-tools
